# prad2evviewer

./: CMakeLists.txt
analysis/: CMakeLists.txt  README.md
analysis/cuts/: split_target.json
analysis/include/: GainCorrCompute.h  MatchingTools.h  PhysicsTools.h  Replay.h  gain_factor.h
analysis/pyscripts/: hv_event_filter.py  plot_nonlinearity.py
analysis/scripts/: rf_time_plot.C
analysis/src/: GainCorrCompute.cpp  MatchingTools.cpp  PhysicsTools.cpp  Replay.cpp
analysis/tools/: calib_5by5.cpp  det_calib.cpp  epCalib.cpp  epics_viewer.py  gamma_calib.cpp  hycal_rf_offset_calib.cpp  matching.cpp  nonlinearity.cpp  online_gain_monitor_base.cpp  quick_check.cpp  quick_check_x17.cpp  refGain_produce.cpp  replay_add_hv.cpp  replay_filter.cpp  replay_gainCorr.cpp  replay_rawdata.cpp  replay_recon.cpp  sim2replay.cpp  sim2replay_hc.cpp
database/: gem_map.json  monitor_config.json  reconstruction_config.json  reconstruction_config_x17.json
database/calibration/: calibration_factor_2p2_fadc.json  calibration_factor_3p5_5by5.json  calibration_factor_3p5_June1.json  calibration_factor_3p5_June7.json  calibration_factor_3p5_June7_nonLinear.json  new_calibration_3p5_Jube1_nonLinear.json  new_calibration_3p5_June7_nonLinear.json  x17_25560.json  x17_25560_fadc.json  x17_25655.json  x17_25655_fadc.json  x17_25825.json  x17_25825_fadc.json
database/daq_cnf/: adchycal_gain_2p2.cnf  adchycal_gain_onlyscint.cnf  adchycal_gain_v4_new_x17.cnf  adchycal_gain_x17_v2.cnf  adchycal_gain_x17_v3.cnf
database/gain_factor/gain_correction/: prad_024827_gain_corr.root  prad_024917_gain_corr.root  prad_024929_gain_corr.root  prad_024937_gain_corr.root  prad_024938_gain_corr.root  prad_024941_gain_corr.root
database/gain_factor/ref_gain/: prad_023915_LMS_hists.root  prad_024827_LMS_hists.root  prad_025293_LMS_hists.root  prad_025546_LMS_hists.root  prad_025547_LMS_hists.root  prad_025560_LMS_hists.root  prad_025655_LMS_hists.root  prad_025825_LMS_hists.root
database/gem_peds/: CommonModeRange_24023.txt  CommonModeRange_24162.txt  CommonModeRange_24177.txt  CommonModeRange_24436.txt  CommonModeRange_24495.txt  CommonModeRange_24535.txt  CommonModeRange_25533.txt
database/hycal_rf_offsets/: 24840.json
database/hycal_time_cut/: example.json
database/runinfo/: 2p1_general.json  general.json
docs/: EPICS_VIEWER.md  PRAD2ANA_API.md  PRAD2DET_API.md  REPLAYED_DATA.md  SERVER_API.md
docs/analysis_notes/: extract_rf_time.md  high_voltage_data.md  online_gain_monitor.md  replay_cuts.md  rf_time_reconstruction_plan.md
docs/rols/: banktags.md
docs/technical_notes/hycal_clustering/: hycal_clustering.md
prad2dec/: CMakeLists.txt
prad2dec/include/: DaqConfig.h  HVDecoder.h  TdcData.h  VtpData.h
prad2dec/src/: HVDecoder.cpp  VtpDecoder.cpp
prad2det/include/: EventData.h  EventData_io.h  GemSystem.h  HyCalCluster.h  HyCalRfOffsets.h  HyCalSystem.h  HyCalTimeCuts.h  PipelineBuilder.h  RfTime.h  RunInfoConfig.h
prad2det/src/: GemSystem.cpp  HyCalCluster.cpp  HyCalSystem.cpp  PipelineBuilder.cpp
python/: bind_dec.cpp  bind_det.cpp
resources/: config.js  gem.js  gem_apv.js  lms.js  online.js  physics.js  report.js  viewer.css  viewer.html  viewer.js
scripts/: README.md  ep_calib_viewer.py  hycal_event_viewer.py  hycal_recon_quality_viewer.py  nonlinearity_viewer.py  online_gain_monitor.py  vtp_vs_hycal_check.py
scripts/shell/: replay_recon.md  replay_recon.sh  submit_replay_recon.md  submit_replay_recon.sh  submit_replay_recon_m.sh
src/: app_state.cpp  app_state.h  app_state_api.cpp  app_state_init.cpp  viewer_server.cpp  viewer_server.h  viewer_server_et.cpp  viewer_server_http.cpp  viewer_utils.h
test/: evio_dump.cpp
test/dev/: ts_dump.cpp
